# django-mmt

./: .dockerignore  .env.dev  .env.dev.example  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  inventory.yml  pyproject.toml  requirements.txt
ansible/: deploy.yml  (+4 more)
app/: .dockerignore  Dockerfile  Dockerfile.prod  biome.json  entrypoint.prod.sh  manage.py  mysql.cnf.example  package-lock.json  package.json  pyproject.toml  requirements.prod.txt  requirements.txt  vite.config.js
app/account/: admin.py  forms.py  models.py  urls.py  views.py
app/account/migrations/: 0002_profile.py
app/assets/css/: elements.css  headings.css  main.css  normalize.css  utilities.css  variables.css
app/assets/js/: add_file.js  close_icon.js  current_upload.js  fetch_wrapper.js  get_next_file_id.js  i18n.js  main.js  progress_bar.js  register_upload.js  submit_checksum.js  upload_form.js  upload_queue.js  upload_queue_item.js
app/core/: admin.py  filesystem.py  forms.py  models.py  tasks.py  urls.py  views.py
app/custom_user/: admin.py  models.py  urls.py  views.py
app/downloads/: files.py  urls.py  views.py
app/frontend/: package-lock.json  package.json  vite.config.ts
app/mmt/: asgi.py  celery.py  production_settings.py  settings.py  urls.py  wsgi.py
app/my_account/: forms.py  models.py  tasks.py  urls.py  views.py
app/pages/: urls.py  views.py
app/upload_jobs/: admin.py  apps.py  filesystem.py  forms.py  models.py  urls.py  views.py
app/uploaded_files/: apps.py  filesystem.py  forms.py  models.py  tasks.py  urls.py  views.py
(+195 files in other folders)
