[project]
name = "django-mmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-filter>=24.3",
    "django>=3.15.2",
    "djangorestframework>=3.7",
    "markdown",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
