[project]
name = "django-mmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "django-cors-headers>=4.4.0",
    "django>=5.1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "ruff>=0.6.4",
]
