[project]
name = "django-mmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aiofiles>=24.1.0",
    "django-cors-headers>=4.4.0",
    "django>=5.1.1",
    "sentry-sdk[django]>=2.14.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "ruff>=0.6.4",
    "django-dotenv>=1.4.2",
]
